# hierwalk

./: .gitignore  CONCEPT.md  JOBS.md  LICENSE  README.md  bootstrap_path.py  history_fn2keep.md  pyproject.toml
.run/: debug_waypoint_fanout.run.xml  debug_waypoint_fanout_no_break.run.xml  hier-walk_waypoint_fanout.run.xml  pytest_waypoint_fanout_trace.run.xml
examples/: flat_run_example.json  search_example.json
scripts/: bench_hgpath_reads.py  bench_index_build.py  bench_missing_giveup.py  bench_pw_cache.py  bench_pw_cache_io.py  build_hw_scan.sh  debug_waypoint_fanout.py  dev-setup.sh  hier-walk  run_hgpath_hgconn.py  run_hierarchy_grep.py  run_pathwalk_hgrep_zz.py  run_zigzag_hgrep_pathwalk_conn.py  run_zigzag_pyslangwalk.py  verify_0_3_27.sh  verify_0_3_28.sh  verify_grep_hie_conn_zigzag.py  verify_pp_t0_scope.py  verify_scoped_resolve.py  vuln_audit_probe.py
tests/: _env.py  conftest.py  test_abc_top_ifdef_port_map.py  test_batch_run_parity.py  test_cache.py  test_cascade_hgrep_pyslangwalk.py  test_cone.py  test_config_env_audit.py  test_connect_artifacts.py  test_connect_coi_heartbeat.py  test_connect_concat_order.py  test_connect_expand.py  test_connect_expand_literals.py  test_connect_index_perf.py  test_connect_index_strategy.py  test_connect_pipeline_fixes.py  test_connect_results_fallback.py  test_connect_scan_split_fast.py  test_connect_text_dedup.py  test_connect_tsv_flatten.py  test_connect_walk_log.py  test_connectivity.py  test_coverage_audit.py  test_elab_index_isolation.py  test_elab_search.py  test_enable_execution.py  test_filelist_hch.py  (+111 more)
(+181 files in other folders)
