[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hier-walk"
version = "0.3.28"
description = "RTL hierarchy path-walk and structural connectivity verification"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
hier-walk = "hierwalk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "stress: deep hierarchy connectivity stress trials (slower)",
    "slow: full zigzag suite verification (tens of minutes)",
]